commit 2022-12-15
Ajuste no Swagger. Finalizado a documentação via swagger na class AuthController.php e adicionado 'sanctum' no 'securitySchemes' em I5-swagger.php.
